--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,8 @@ services:
     env: python
     plan: free
     region: singapore
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: |
+      apt-get update && apt-get install -y ffmpeg
+      pip install --upgrade pip
+      pip install -r requirements.txt
     startCommand: "gunicorn main:app"
