--- a/render.yaml
+++ b/render.yaml
@@ -9,3 +9,8 @@ services:
       pip install --upgrade pip
       pip install -r requirements.txt
     startCommand: "gunicorn main:app"
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.10.14
+      - key: OPENAI_API_KEY
+        sync: false
