--- a/render.yaml
+++ b/render.yaml
@@ -4,13 +4,5 @@ services:
     env: python
     plan: free
     region: singapore
-    buildCommand: |
-      apt-get update && apt-get install -y ffmpeg
-      pip install --upgrade pip
-      pip install -r requirements.txt
+    buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn main:app"
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.10.14
-      - key: OPENAI_API_KEY
-        sync: false
